syntax = "proto3";

option csharp_namespace = "grpc";

package Test;

service Do
{
    rpc DoCreate(CreateRequest) returns (CreateResponse){}
    rpc DoRead(ReadRequest) returns (ReadResponse){}
    rpc DoList(GetAllRequest) returns (GetAllResponse){}
    rpc DoDelete(DeleteRequest) returns (DeleteResponse){}
    rpc DoUpdate(UpdateRequest) returns (UpdateResponse){}
}

message CreateRequest{
    string title=1;
    string description=2;
}

message CreateResponse{
    int32 id=1;
}

message ReadRequest{
    int32 id=1;
}

message ReadResponse{
    int32 id=1;
    string title=2;
    string description=3;
}

message GetAllRequest{}
message GetAllResponse{
    repeated ReadResponse id =1;
}

message UpdateRequest{
    int32 id=1;
    string title=2;
    string description =3;
}

message UpdateResponse{
    int32 id=1;
}

message DeleteRequest{
    int32 id=1;
}

message DeleteResponse{
    int32 id=1;
}